--- a/Desktop Vdieo/Desktop Vdieo/Localizable.xcstrings
+++ b/Desktop Vdieo/Desktop Vdieo/Localizable.xcstrings
@@ -25,6 +25,9 @@
       },
       "shouldTranslate" : false
     },
+    "%" : {
+
+    },
     "%@ %@" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -73,6 +76,9 @@
       },
       "shouldTranslate" : false
     },
+    "0" : {
+
+    },
     "1.0" : {
       "shouldTranslate" : false
     },
@@ -81,6 +87,9 @@
     },
     "40" : {
       "shouldTranslate" : false
+    },
+    "100" : {
+
     },
     "AboutDesktopVideo" : {
       "extractionState" : "manual",
@@ -235,52 +244,6 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "清除"
-          }
-        }
-      }
-    },
-    "Play" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Play"
-          }
-        },
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "播放"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "播放"
-          }
-        }
-      }
-    },
-    "Pause" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Pause"
-          }
-        },
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "暂停"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "暫停"
           }
         }
       }
@@ -501,9 +464,6 @@
         }
       }
     },
-    "English" : {
-
-    },
     "GB" : {
       "shouldTranslate" : false
     },
@@ -546,9 +506,6 @@
       }
     },
     "help" : {
-
-    },
-    "Idle pause sensitivity" : {
 
     },
     "idlePauseSensitivity" : {
@@ -770,8 +727,40 @@
         }
       }
     },
-    "Mode" : {
-
+    "MuteVideo" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Mute Video"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Silenciar video"
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Couper le son de la vidéo"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "静音视频"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "靜音視頻"
+          }
+        }
+      }
     },
     "NowPlaying" : {
       "extractionState" : "manual",
@@ -843,6 +832,52 @@
         }
       }
     },
+    "Pause" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Pause"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "暂停"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "暫停"
+          }
+        }
+      }
+    },
+    "Play" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Play"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "播放"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "播放"
+          }
+        }
+      }
+    },
     "Playback" : {
 
     },
@@ -881,6 +916,41 @@
         }
       }
     },
+    "PlaybackAlwaysDesc" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Always play video regardless of activity."
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Reproduce siempre el video sin importar la actividad."
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Lit toujours la vidéo quelle que soit l'activité."
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "始终播放，不受活动影响。"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "始終播放，不受活動影響。"
+          }
+        }
+      }
+    },
     "PlaybackAuto" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -912,6 +982,41 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "自動"
+          }
+        }
+      }
+    },
+    "PlaybackAutoDesc" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Pause when the system is idle."
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Pausa cuando el sistema está inactivo."
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Met en pause lorsque le système est inactif."
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "空闲时暂停播放。"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "閒置時暫停播放。"
           }
         }
       }
@@ -986,6 +1091,41 @@
         }
       }
     },
+    "PlaybackPowerSaveDesc" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Pause when the screen is fully covered."
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Pausa cuando la pantalla está completamente cubierta."
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Met en pause lorsque l'écran est entièrement couvert."
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "完全遮挡时暂停。"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "完全遮擋時暫停。"
+          }
+        }
+      }
+    },
     "PlaybackPowerSavePlus" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -1021,74 +1161,109 @@
         }
       }
     },
-    "PlaybackStatic" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : { "stringUnit" : { "state" : "translated", "value" : "Pause" } },
-        "es" : { "stringUnit" : { "state" : "translated", "value" : "Pausar" } },
-        "fr" : { "stringUnit" : { "state" : "translated", "value" : "Pause" } },
-        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "暂停" } },
-        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "暫停" } }
-      }
-    },
-    "PlaybackAlwaysDesc" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : { "stringUnit" : { "state" : "translated", "value" : "Always play video regardless of activity." } },
-        "es" : { "stringUnit" : { "state" : "translated", "value" : "Reproduce siempre el video sin importar la actividad." } },
-        "fr" : { "stringUnit" : { "state" : "translated", "value" : "Lit toujours la vidéo quelle que soit l'activité." } },
-        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "始终播放，不受活动影响。" } },
-        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "始終播放，不受活動影響。" } }
-      }
-    },
-    "PlaybackAutoDesc" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : { "stringUnit" : { "state" : "translated", "value" : "Pause when the system is idle." } },
-        "es" : { "stringUnit" : { "state" : "translated", "value" : "Pausa cuando el sistema está inactivo." } },
-        "fr" : { "stringUnit" : { "state" : "translated", "value" : "Met en pause lorsque le système est inactif." } },
-        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "空闲时暂停播放。" } },
-        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "閒置時暫停播放。" } }
-      }
-    },
-    "PlaybackPowerSaveDesc" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : { "stringUnit" : { "state" : "translated", "value" : "Pause when the screen is fully covered." } },
-        "es" : { "stringUnit" : { "state" : "translated", "value" : "Pausa cuando la pantalla está completamente cubierta." } },
-        "fr" : { "stringUnit" : { "state" : "translated", "value" : "Met en pause lorsque l'écran est entièrement couvert." } },
-        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "完全遮挡时暂停。" } },
-        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "完全遮擋時暫停。" } }
-      }
-    },
     "PlaybackPowerSavePlusDesc" : {
       "extractionState" : "manual",
       "localizations" : {
-        "en" : { "stringUnit" : { "state" : "translated", "value" : "Pause when any part of the screen is covered." } },
-        "es" : { "stringUnit" : { "state" : "translated", "value" : "Pausa cuando cualquier parte de la pantalla está cubierta." } },
-        "fr" : { "stringUnit" : { "state" : "translated", "value" : "Met en pause lorsqu'une partie de l'écran est couverte." } },
-        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "任意遮挡时暂停。" } },
-        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "任意遮擋時暫停。" } }
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Pause when any part of the screen is covered."
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Pausa cuando cualquier parte de la pantalla está cubierta."
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Met en pause lorsqu'une partie de l'écran est couverte."
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "任意遮挡时暂停。"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "任意遮擋時暫停。"
+          }
+        }
+      }
+    },
+    "PlaybackStatic" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Pause"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Pausar"
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Pause"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "暂停"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "暫停"
+          }
+        }
       }
     },
     "PlaybackStaticDesc" : {
       "extractionState" : "manual",
       "localizations" : {
-        "en" : { "stringUnit" : { "state" : "translated", "value" : "Do not play the video." } },
-        "es" : { "stringUnit" : { "state" : "translated", "value" : "No reproducir el video." } },
-        "fr" : { "stringUnit" : { "state" : "translated", "value" : "Ne pas lire la vidéo." } },
-        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "不播放视频。" } },
-        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "不播放視頻。" } }
-      }
-    },
-    "MuteVideo" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : { "stringUnit" : { "state" : "translated", "value" : "Mute Video" } },
-        "es" : { "stringUnit" : { "state" : "translated", "value" : "Silenciar video" } },
-        "fr" : { "stringUnit" : { "state" : "translated", "value" : "Couper le son de la vidéo" } },
-        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "静音视频" } },
-        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "靜音視頻" } }
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Do not play the video."
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "No reproducir el video."
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ne pas lire la vidéo."
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "不播放视频。"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "不播放視頻。"
+          }
+        }
       }
     },
     "Preferences" : {
@@ -1622,9 +1797,6 @@
         }
       }
     },
-    "System" : {
-
-    },
     "UnknownScreen" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -1766,9 +1938,6 @@
       }
     },
     "Wallpaper" : {
-
-    },
-    "中文" : {
 
     }
   },
