--- a/Desktop Vdieo/Desktop Vdieo/Localizable.xcstrings
+++ b/Desktop Vdieo/Desktop Vdieo/Localizable.xcstrings
@@ -61,10 +61,44 @@
       }
     },
     "Auto pause and power modes." : {
-
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : { "state" : "translated", "value" : "Auto pause and power modes." }
+        },
+        "es" : {
+          "stringUnit" : { "state" : "translated", "value" : "Pausa automática y modos de energía." }
+        },
+        "fr" : {
+          "stringUnit" : { "state" : "translated", "value" : "Pause automatique et modes d'énergie." }
+        },
+        "zh-Hans" : {
+          "stringUnit" : { "state" : "translated", "value" : "自动暂停和电源模式。" }
+        },
+        "zh-Hant" : {
+          "stringUnit" : { "state" : "translated", "value" : "自動暫停和電源模式。" }
+        }
+      }
     },
     "Auto sync new screens" : {
-
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : { "state" : "translated", "value" : "Auto sync new screens" }
+        },
+        "es" : {
+          "stringUnit" : { "state" : "translated", "value" : "Sincronizar pantallas nuevas automáticamente" }
+        },
+        "fr" : {
+          "stringUnit" : { "state" : "translated", "value" : "Synchroniser automatiquement les nouveaux écrans" }
+        },
+        "zh-Hans" : {
+          "stringUnit" : { "state" : "translated", "value" : "自动同步新插入的显示器" }
+        },
+        "zh-Hant" : {
+          "stringUnit" : { "state" : "translated", "value" : "自動同步新插入的顯示器" }
+        }
+      }
     },
     "AutoSyncNewScreens" : {
       "extractionState" : "manual",
@@ -242,7 +276,14 @@
       }
     },
     "Common preferences." : {
-
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : { "stringUnit" : { "state" : "translated", "value" : "Common preferences." } },
+        "es" : { "stringUnit" : { "state" : "translated", "value" : "Preferencias comunes." } },
+        "fr" : { "stringUnit" : { "state" : "translated", "value" : "Préférences générales." } },
+        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "通用偏好设置。" } },
+        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "通用偏好設定。" } }
+      }
     },
     "Confirm" : {
       "extractionState" : "manual",
@@ -528,7 +569,14 @@
       }
     },
     "help" : {
-
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : { "stringUnit" : { "state" : "translated", "value" : "help" } },
+        "es" : { "stringUnit" : { "state" : "translated", "value" : "ayuda" } },
+        "fr" : { "stringUnit" : { "state" : "translated", "value" : "aide" } },
+        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "帮助" } },
+        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "幫助" } }
+      }
     },
     "idlePauseSensitivity" : {
       "extractionState" : "manual",
@@ -601,7 +649,14 @@
       }
     },
     "Launch at login" : {
-
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : { "stringUnit" : { "state" : "translated", "value" : "Launch at login" } },
+        "es" : { "stringUnit" : { "state" : "translated", "value" : "Iniciar al iniciar sesión" } },
+        "fr" : { "stringUnit" : { "state" : "translated", "value" : "Lancer à l'ouverture de session" } },
+        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "登录时启动" } },
+        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "登入時啟動" } }
+      }
     },
     "LaunchAtLogin" : {
       "extractionState" : "manual",
@@ -674,10 +729,24 @@
       }
     },
     "Manage video wallpapers per display." : {
-
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : { "stringUnit" : { "state" : "translated", "value" : "Manage video wallpapers per display." } },
+        "es" : { "stringUnit" : { "state" : "translated", "value" : "Gestiona fondos de video por pantalla." } },
+        "fr" : { "stringUnit" : { "state" : "translated", "value" : "Gérer les fonds d'écran vidéo par écran." } },
+        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "按显示器管理视频壁纸。" } },
+        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "按顯示器管理影片桌布。" } }
+      }
     },
     "Max video cache (GB)" : {
-
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : { "stringUnit" : { "state" : "translated", "value" : "Max video cache (GB)" } },
+        "es" : { "stringUnit" : { "state" : "translated", "value" : "Caché de video máxima (GB)" } },
+        "fr" : { "stringUnit" : { "state" : "translated", "value" : "Cache vidéo max (Go)" } },
+        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "视频缓存上限（GB）" } },
+        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "影片快取上限（GB）" } }
+      }
     },
     "MaxVideoFileSizeGB" : {
       "extractionState" : "manual",
@@ -1730,7 +1799,14 @@
       }
     },
     "Show only in menu bar" : {
-
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : { "stringUnit" : { "state" : "translated", "value" : "Show only in menu bar" } },
+        "es" : { "stringUnit" : { "state" : "translated", "value" : "Mostrar solo en la barra de menús" } },
+        "fr" : { "stringUnit" : { "state" : "translated", "value" : "Afficher uniquement dans la barre de menus" } },
+        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "仅在菜单栏显示" } },
+        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "僅在選單列顯示" } }
+      }
     },
     "StartScreensaver" : {
       "extractionState" : "manual",
@@ -1905,6 +1981,16 @@
             "value" : "同步當前螢幕狀態到所有螢幕"
           }
         }
+      }
+    },
+    "Unknown" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : { "stringUnit" : { "state" : "translated", "value" : "Unknown" } },
+        "es" : { "stringUnit" : { "state" : "translated", "value" : "Desconocido" } },
+        "fr" : { "stringUnit" : { "state" : "translated", "value" : "Inconnu" } },
+        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "未知" } },
+        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "未知" } }
       }
     },
     "UnknownScreen" : {
