feat: add sync button to duplicate video across screens

--- a/Desktop Video/Desktop Video/Localizable.xcstrings
+++ b/Desktop Video/Desktop Video/Localizable.xcstrings
@@ -1150,6 +1150,41 @@
         }
       }
     },
+    "Sync to all screens": {
+      "extractionState": "manual",
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Sync to all screens"
+          }
+        },
+        "es": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Sincronizar con todas las pantallas"
+          }
+        },
+        "fr": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Synchroniser sur tous les écrans"
+          }
+        },
+        "zh-Hans": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "同步到所有屏幕"
+          }
+        },
+        "zh-Hant": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "同步到所有螢幕"
+          }
+        }
+      }
+    },
     "Playback": {
       "extractionState": "manual",
       "localizations": {
